# yt-issue-reviewer

./: .gitignore  .readthedocs.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: architecture.md  architecture.rst  cli-reference.md  cli-reference.rst  conf.py  configuration.md  configuration.rst  index.md  index.rst  installation.md  installation.rst  privacy-and-security.md  privacy-and-security.rst  quickstart.md  quickstart.rst  releasing.md  releasing.rst  requirements.txt  yt-cli-upstream-candidates.md
specs/001-related-issue-finder/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-related-issue-finder/checklists/: requirements.md
specs/001-related-issue-finder/contracts/: cli.md  ollama-client.md  youtrack-adapter.md
specs/002-zizmor-gha-security/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-zizmor-gha-security/checklists/: requirements.md
specs/002-zizmor-gha-security/contracts/: ci-audit.md
specs/003-dev-infrastructure/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-dev-infrastructure/checklists/: requirements.md
specs/003-dev-infrastructure/contracts/: dependabot.md  justfile.md  release.md
specs/004-python-311-support/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-python-311-support/checklists/: requirements.md
specs/005-install-cli-fixes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-install-cli-fixes/checklists/: requirements.md
specs/005-install-cli-fixes/contracts/: cli-options.md
specs/006-fix-yt-json-parse/: plan.md  research.md  spec.md  tasks.md
specs/006-fix-yt-json-parse/checklists/: requirements.md
specs/007-fix-status-state-filter/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-fix-status-state-filter/checklists/: requirements.md
specs/009-fix-open-state-filter/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-fix-open-state-filter/checklists/: requirements.md
specs/010-fetch-all-issues/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-fetch-all-issues/checklists/: requirements.md
specs/011-chunked-issue-fetch/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-chunked-issue-fetch/checklists/: requirements.md
specs/012-fix-invalid-json-escape/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-fix-invalid-json-escape/checklists/: requirements.md
specs/013-add-version-flag/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-add-version-flag/checklists/: requirements.md
specs/014-surface-yt-stdout-errors/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-surface-yt-stdout-errors/checklists/: requirements.md
specs/015-fix-backslash-newline-escape/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-fix-backslash-newline-escape/checklists/: requirements.md
src/yt_issue_reviewer/: __init__.py  cli.py  config.py  errors.py  pipeline.py
src/yt_issue_reviewer/analyze/: clustering.py  evidence.py  scoring.py  structural.py  terms.py
src/yt_issue_reviewer/embeddings/: ollama.py
src/yt_issue_reviewer/ingest/: models.py  youtrack.py
src/yt_issue_reviewer/llm/: labeler.py
src/yt_issue_reviewer/report/: terminal.py
src/yt_issue_reviewer/store/: repository.py  schema.py
tests/: conftest.py
tests/fixtures/: issues_small.json
tests/integration/: test_analyze_end_to_end.py
tests/unit/: test_cli_options.py  test_clustering.py  test_cosine.py  test_embedder.py  test_embedding_cache.py  test_evidence.py  test_ingest_cache.py  test_ingest_filters.py  test_labeler.py  test_labeler_isolation.py  test_load_json_issues.py  test_repository.py  test_scoring.py  test_show_offline.py  test_structural.py  test_terms.py  test_youtrack_source.py  test_youtrack_subprocess.py
