[project]
name = "yt-issue-reviewer"
version = "0.1.0"
description = "Find related issues across a YouTrack instance using self-hosted Ollama embeddings + local structural signals."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ryan Cheley" }]
keywords = ["youtrack", "issues", "duplicates", "embeddings", "ollama", "cli", "datasette"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "numpy>=2.0",
    "ollama>=0.6",
    "youtrack-cli>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/ryancheley/yt-issue-reviewer"
Repository = "https://github.com/ryancheley/yt-issue-reviewer"
Issues = "https://github.com/ryancheley/yt-issue-reviewer/issues"

[project.scripts]
yt-issue-reviewer = "yt_issue_reviewer.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "ty>=0.0.1a1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_issue_reviewer"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ty.environment]
python-version = "3.14"
